--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>My First Bitstarter</title>
-    <link type="text/css" rel="stylesheet"
-	  href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link type="text/css" rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <style type="text/css">
+      /* Large desktop */
+      @media (min-width: 980px) {
+        body {
+          padding-top: 60px;
+        }
+      }
+
+
+
+      /* Main all form factors */
       body {
         padding-top: 20px;
         padding-bottom: 40px;
@@ -36,7 +46,30 @@
       }
     </style>
   </head>
-  <body>
+<body>
+
+
+  <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar-inner">
+      <div class="container">
+	<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+	  <span class="icon-bar"></span>
+	  <span class="icon-bar"></span>
+	  <span class="icon-bar"></span>
+	</button>
+	<a class="brand" href="#">Bitstarter</a>
+	<div class="nav-collapse collapse">
+	  <ul class="nav">
+	    <li class="active"><a href="#">Home</a></li>
+	    <li><a href="#about">About</a></li>
+	    <li><a href="#contact">Contact</a></li>
+	  </ul>
+	</div>
+      </div>
+    </div>
+  </div>
+
+
     <div class="container">
       <div class="row navigation">
 	<div class="span2 logo">
