--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>My First Bitstarter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
+    <link rel="stylesheet" href="http://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
     <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" rel="stylesheet" type="text/css">
     <style type="text/css">
@@ -12,6 +14,25 @@
       @media (min-width: 980px) {
         body {
           padding-top: 60px;
+        }
+        .linediv-l {
+          border-right: 1px white solid;
+        }
+        .linediv-r {
+          border-left: 1px white solid;
+        }
+      }
+      
+      /* Landscape phones and down *?
+      @media (max-width: 480px) {
+        .copy {
+          padding: 2.5% 10%;
+        }
+        .linediv-l {
+          border-bottom: 1px white solid;
+        }
+        .linediv-r {
+          border-top: 1px white solid;
         }
       }
 
@@ -25,31 +46,32 @@
         font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
         text-align: center;
       }
-      .container {
-        width: 960px;
-      }
       p.lead {
         padding-top: 1.5%;
         font-size: 24px;
         line-height: 30px;
       }
-      .navigation, .pitch, .section1, .section2, .faq, .footer {
-        padding: 10px 0px 10px 0px;
+      p {
+        font-size: 18px;
+        line-height: 24px;
       }
-      .video, .thermometer, .order, .social {
-        border: 1px dotted;
+
+      /* video pitch and action */
+      .pitch {
+        padding: 2.5% 0%;
+      }
+      .order {
+        padding: 2% 0%;
+      }
+      .actions {
+        background-color: #343434;
+        padding: 3% 0%;
+      }
+      .video, .thermometer, .order, .social, .statistics {
         text-align: center;
       }
-      .video {
-        height: 124px;
-        line-height: 124px;
-      }
-      .thermometer, .order, .social {
-        height: 40px;
-        line-height: 40px;
-      }
-      div.row {
-        border: 1px solid;
+      .statistics h3, .statistics p {
+        color: white;
       }
     </style>
   </head>
@@ -90,22 +112,49 @@
       </div>
     </div>
       
-      <div class="row pitch">
-	<div class="span6 video">
-	  Video
+    <div class="row-fluid pitch">
+      <div class="span5 offset1 video">
+	<img class="img-polaroid" src="http://placehold.it/480x300">
+      </div>
+
+      <div class="span5 actions">
+	<div class="span8 offset2">
+	  <div class="statistics">
+	    <div class="span4">
+	      <div class="linediv-l">
+		<h3>1000</h3> <p>backers</p>
+	      </div>
+	    </div>
+	    <div class="span4">
+	      <div class="linediv-c">
+		<h3>$6000</h3> <p>of $10,000</p>
+	      </div>
+	    </div>
+	    <div class="span4">
+	      <div class="linediv-r">
+		<h3>10</h3> <p>days left</p>
+	      </div>
+	    </div>
+	  </div>
 	</div>
-	<div class="span6">
-	  <div class="thermometer">
-	    Thermometer
+	<div class="span10 offset1">
+	  <div class="thermometer progress active">
+	    <div class="bar bar-success" style="width: 60%"></div>
+	    <div class="bar bar-warning" style="width: 40%"></div>
 	  </div>
-	  <div class="order">
-	    Order
-	  </div>
-	  <div class="social">
-	    Social
-	  </div>
+	</div>
+	<div class="span6 offset3 order">
+	  <button class="btn btn-success btn-large">Preorder</button>
+	</div>
+	<div class="span8 offset2 social">
+	  <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
+	  <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
 	</div>
       </div>
+    </div>
+
+
+
       <div class="row section1">
 	<div class="span12">
 	  Marketing Section 1
