--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@
       }
     </style>
   </head>
-<body>
-
+  <body>
 
   <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner">
@@ -248,12 +247,16 @@
 	</div>
       </div>
     </div>
-
-      <div class="row footer">
-	<div class="span12">
-	  Footer
-	</div>
+    
+    <div class="row-fluid footer">
+      <div class="span12">
+	<p>This work is licensed under 
+	  the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC 
+	    By-SA 3.0
+	  </a>, without all the cruft that would otherwise be 
+	  put at the bottom of the page.</p>
       </div>
     </div>
+  </div>
   </body>
 </html>
