Updated page to contain product information

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         font-size: 24px;
         line-height: 30px;
       }
+
       p {
         font-size: 18px;
         line-height: 24px;
@@ -124,13 +125,13 @@
   <div class="container">
     <div class="row-fluid heading">
       <div class="span12">
-	<h1>Product</h1>
+	<h1>Lytefast</h1>
       </div>
     </div>
 
     <div class="row-fluid subheading">
       <div class="span12">
-	<p class="lead">One sentence description.</p>
+	<p class="lead">Travel at the speed of light.</p>
       </div>
     </div>
       
@@ -149,7 +150,7 @@
 	    </div>
 	    <div class="span4">
 	      <div class="linediv-c">
-		<h3>$6000</h3> <p>of $10,000</p>
+		<h3>$6000</h3> <p>of $10 billion </p>
 	      </div>
 	    </div>
 	    <div class="span4">
@@ -180,35 +181,31 @@
 	<img class="img-polaroid" src="http://placehold.it/480x300">
       </div>
       <div class="span5 copy">
-	<p>
-	  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
+	<p>Have you ever wanted to eat breakfast in Paris, lunch in 
+	  Hong Kong, and dinner in the Andromeda galaxy? Well now you
+	  can. Lytefast provides you with nearly instantaneous travel
+	  to any destination in the known universe. The days of 
+	  sitting in traffic are soon to be a thing of the past as 
+	  personal Lytefast transportation pads become available to 
+	  the public. Utilizing advances in quantum physics and 
+	  wormhole technology, Lytefast allows teleportation to take
+	  place with a nearly 0% chance of your DNA becoming scrambled
+	  resulting in unfortunate mutations. 
 	</p>
       </div>
     </div>
     <div class="row-fluid section2">
       <div class="span5 offset1 copy copy-right">
+	<h3> How does it work? </h3>
 	<p>
-	  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
+	  To achieve instantaneous teleportation, Lytefast only needs a 
+	  regular power outlet and a connection to the Lytefast wormhole
+	  servers. Simply step on to the Lytefast transportation pad with
+	  any belongings you wish to take on your travels, enter in 
+	  coordinates for your destination, and press the big red button.
+	  The Lytefast servers will determine the best wormhole to accomodate
+	  your transportation needs, tear a hole in the fabric of space-time 
+	  and away you go. 
 	</p>
       </div>
       <div class="span5 asset">
@@ -223,24 +220,52 @@
 	  <div class="accordion-group">
 	    <div class="accordion-heading">
 	      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-		What does FAQ stand for?
+		What are the side effects of Lytefast transportation?
 	      </a>
 	    </div>
 	    <div id="collapseOne" class="accordion-body collapse">
 	      <div class="accordion-inner">
-		Frequently Asked Question.
+		Lytefast transportation is almost 100% safe and painless. In
+		rare cases, the stress of being ripped through a wormhole
+		at speeds faster than light can cause genetic mutations
+		which can lead to interesting side effects including but
+		not limited to: sudden death, explosion, implosion, extra
+		fingers, extra toes, extra arms, extra legs, ability to
+		communicate with animals, and glowing green skin. Lytefast
+		is not responsible for any side effects that you may
+		encounter. The Lytefast transportation pad should be used
+		at your own risk.
 	      </div>
 	    </div>
 	  </div>
 	  <div class="accordion-group">
 	    <div class="accordion-heading">
 	      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-		What's a Frequently Asked Question?
+		How do I return from my destination?
 	      </a>
 	    </div>
 	    <div id="collapseTwo" class="accordion-body collapse">
 	      <div class="accordion-inner">
-		A question which is commonly asked by users.
+		After you are done with your travel, the return process is
+		just as simple as the journey there. Simply return to the
+		location where you materialized through the wormhole, 
+		click your heels a couple of times, and hop back into 
+		the wormhole. If for any reason your wormhole has closed,
+		try to find a way to start a signal fire and hope for a 
+		speedy rescue.
+	      </div>
+	    </div>
+	  </div>
+	  <div class="accordion-group">
+	    <div class="accordion-heading">
+	      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">How much does a Lytefast transportation pad cost?</a>
+	    </div>
+	    <div class="accordion-body collapse" id="collapseThree">
+	      <div class="accordion-inner">
+		The Lytefast transportation pad can be yours for the low price of
+		12 easy payments of $1499.99. If ordered before 2014, we will
+		provide you with 2 Lytefast transportation pads for your traveling
+		convienience. 
 	      </div>
 	    </div>
 	  </div>
