--- a/index.html
+++ b/index.html
@@ -137,10 +137,11 @@
       
     <div class="row-fluid pitch">
       <div class="span5 offset1 video">
-	<img class="img-polaroid" src="http://placehold.it/480x300">
+	<img class="img-polaroid" alt="placeholder" src="http://placehold.it/480x300">
       </div>
 
       <div class="span5 actions">
+	<div class="row-fluid">
 	<div class="span8 offset2">
 	  <div class="statistics">
 	    <div class="span4">
@@ -160,25 +161,32 @@
 	    </div>
 	  </div>
 	</div>
+	<div class="row-fluid">
 	<div class="span10 offset1">
 	  <div class="thermometer progress active">
 	    <div class="bar bar-success" style="width: 60%"></div>
 	    <div class="bar bar-warning" style="width: 40%"></div>
 	  </div>
 	</div>
+	</div>
+	<div class="row-fluid">
 	<div class="span6 offset3 order">
 	  <button class="btn btn-success btn-large">Preorder</button>
 	</div>
+	</div>
+	<div class="row-fluid">
 	<div class="span8 offset2 social">
 	  <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
 	  <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
 	</div>
+	</div>
+      </div>
       </div>
     </div>
 
     <div class="row-fluid section1">
       <div class="span5 offset1 asset">
-	<img class="img-polaroid" src="http://placehold.it/480x300">
+	<img class="img-polaroid" alt="placeholder" src="http://placehold.it/480x300">
       </div>
       <div class="span5 copy">
 	<p>Have you ever wanted to eat breakfast in Paris, lunch in 
@@ -209,7 +217,7 @@
 	</p>
       </div>
       <div class="span5 asset">
-	<img class="img-polaroid" src="http://placehold.it/480x300">
+	<img class="img-polaroid" alt="placeholder" src="http://placehold.it/480x300">
       </div>
     </div>
     
