Added bitcoin payment

--- a/index.html
+++ b/index.html
@@ -188,7 +188,13 @@
 	</div>
 	<div class="row-fluid">
 	<div class="span6 offset3 order">
-	  <button class="btn btn-success btn-large">Preorder</button>
+	  <a class="coinbase-button" data-code="0ce061875a4dab88734c54188dc9e2e6" 
+	     data-button-style="custom_large" 
+	     data-button-text="Preorder with Bitcoin"
+	     href="https://coinbase.com/checkouts/0ce061875a4dab88734c54188dc9e2e6">
+	    Preorder With Bitcoin
+	  </a>
+	  <script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
 	</div>
 	</div>
 	<div class="row-fluid">
